# alfresco-agents-lab-clive

./: .env.example  .gitignore  README.md  compose.yaml  docker-compose.yaml  dockerfile  main.py
alfresco-deployment/: .env  .gitignore  README.md  compose.yaml
alfresco-deployment/alfresco/: Dockerfile
alfresco-mcp-server/: Dockerfile  README.md  get_markdown_content.py
fastapi-agent/: .env.example  README.md  compose.yaml  dockerfile  main.py  pyproject.toml
lab-material/: add-action-to-aca.md  add-mcp-tool.md
